# copy

./: README.md  action.yml  pyproject.toml  task.yml
.github/workflows/: test.yml
prepare_copy/: main.py
tests/: test_main.py
